--- a/UI/sass/_layout.scss
+++ b/UI/sass/_layout.scss
@@ -40,6 +40,7 @@ section[role="main"] {
                 .user-data {
                     padding: 0 25px;
                     line-height: 80px;
+                    font-size: 13px;
                     img {
                         vertical-align: middle;
                         margin-right: 10px;
@@ -57,6 +58,7 @@ section[role="main"] {
         .calendar-grid {
             height: 600px;
             .day {
+                cursor: pointer;
                 position: relative;
                 float: left;
                 width: 30px;
@@ -70,6 +72,9 @@ section[role="main"] {
                 //     background: #f7f7f7;
                 // }
                 border-bottom: 1px solid #ccc;
+                &:hover {
+                    background: #f7f7f7;
+                }
                 &.active {
                     height: 27px;
                     border-bottom: solid 3px #ff0000;
