--- a/UI/css/screen.css
+++ b/UI/css/screen.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -673,8 +673,37 @@ header[role="banner"] {
   padding: 0 12px;
   color: #999999;
 }
+/* line 12, ../sass/_layout.scss */
+header[role="banner"] h1 {
+  float: left;
+}
+/* line 15, ../sass/_layout.scss */
+header[role="banner"] nav {
+  margin-left: 200px;
+}
+/* line 19, ../sass/_layout.scss */
+header[role="banner"] nav ul li {
+  float: left;
+  margin: 0;
+  margin-right: -1px;
+}
+/* line 25, ../sass/_layout.scss */
+header[role="banner"] nav ul li a {
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  padding: 0px 12px;
+  color: #d1d2d3;
+  font-size: 13px;
+}
+/* line 33, ../sass/_layout.scss */
+header[role="banner"] nav ul li a.active, header[role="banner"] nav ul li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: #2b2b2b;
+}
 
-/* line 18, ../sass/_layout.scss */
+/* line 49, ../sass/_layout.scss */
 section[role="main"] nav {
   float: left;
   direction: ltr;
@@ -686,7 +715,7 @@ section[role="main"] nav {
   padding-top: 25px;
   padding-bottom: 25px;
 }
-/* line 25, ../sass/_layout.scss */
+/* line 56, ../sass/_layout.scss */
 section[role="main"] aside {
   float: left;
   direction: ltr;
@@ -700,22 +729,22 @@ section[role="main"] aside {
   height: 100%;
   color: #d1d2d3;
 }
-/* line 33, ../sass/_layout.scss */
+/* line 64, ../sass/_layout.scss */
 section[role="main"] aside .users .user {
   height: 80px;
   border-bottom: 1px solid #717b85;
 }
-/* line 37, ../sass/_layout.scss */
+/* line 68, ../sass/_layout.scss */
 section[role="main"] aside .users .user:nth-child(2n+1) {
   background: #222222;
 }
-/* line 40, ../sass/_layout.scss */
+/* line 71, ../sass/_layout.scss */
 section[role="main"] aside .users .user .user-data {
   padding: 0 25px;
   line-height: 80px;
   font-size: 13px;
 }
-/* line 44, ../sass/_layout.scss */
+/* line 75, ../sass/_layout.scss */
 section[role="main"] aside .users .user .user-data img {
   vertical-align: middle;
   margin-right: 10px;
@@ -725,7 +754,7 @@ section[role="main"] aside .users .user .user-data img {
   -o-border-radius: 26px;
   border-radius: 26px;
 }
-/* line 54, ../sass/_layout.scss */
+/* line 85, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport {
   overflow: auto;
   float: left;
@@ -736,15 +765,15 @@ section[role="main"] .calendar-viewport {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
-/* line 58, ../sass/_layout.scss */
+/* line 89, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid {
-  height: 600px;
+  height: 708px;
 }
-/* line 60, ../sass/_layout.scss */
+/* line 91, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .months {
   float: left;
 }
-/* line 63, ../sass/_layout.scss */
+/* line 94, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .day {
   cursor: pointer;
   position: relative;
@@ -758,20 +787,20 @@ section[role="main"] .calendar-viewport .calendar-grid .day {
   font-size: 12px;
   border-bottom: 1px solid #ccc;
 }
-/* line 78, ../sass/_layout.scss */
+/* line 109, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .day:hover {
   background: #f7f7f7;
 }
-/* line 81, ../sass/_layout.scss */
+/* line 112, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .day.active {
   height: 27px;
   border-bottom: solid 3px #ff0000;
 }
-/* line 85, ../sass/_layout.scss */
+/* line 116, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .day.weekend {
   background: url(../images/weekend.gif);
 }
-/* line 88, ../sass/_layout.scss */
+/* line 119, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .day .task {
   color: #fff;
   cursor: pointer;
@@ -785,7 +814,7 @@ section[role="main"] .calendar-viewport .calendar-grid .day .task {
   font-weight: normal;
   font-size: 11px;
 }
-/* line 103, ../sass/_layout.scss */
+/* line 134, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .month {
   height: 30px;
   background: #ffffff;
@@ -795,46 +824,62 @@ section[role="main"] .calendar-viewport .calendar-grid .month {
   text-align: center;
   font-size: 12px;
 }
-/* line 112, ../sass/_layout.scss */
+/* line 143, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .days {
   height: 30px;
 }
-/* line 115, ../sass/_layout.scss */
+/* line 146, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .users-grid {
   height: 80px;
   border-bottom: 1px solid #ccc;
 }
-/* line 118, ../sass/_layout.scss */
+/* line 149, ../sass/_layout.scss */
 section[role="main"] .calendar-viewport .calendar-grid .users-grid .day {
   height: 80px;
 }
+/* line 151, ../sass/_layout.scss */
+section[role="main"] .calendar-viewport .calendar-grid .users-grid .day.active {
+  background: #ffdddd;
+  border-bottom: 1px solid #ccc;
+}
 
-/* line 126, ../sass/_layout.scss */
+/* line 161, ../sass/_layout.scss */
 .card-label-green {
   background-color: #34b27d;
 }
 
-/* line 127, ../sass/_layout.scss */
+/* line 162, ../sass/_layout.scss */
 .card-label-yellow {
   background-color: #dbdb57;
 }
 
-/* line 128, ../sass/_layout.scss */
+/* line 163, ../sass/_layout.scss */
 .card-label-orange {
   background-color: #e09952;
 }
 
-/* line 129, ../sass/_layout.scss */
+/* line 164, ../sass/_layout.scss */
 .card-label-red {
   background-color: #cb4d4d;
 }
 
-/* line 130, ../sass/_layout.scss */
+/* line 165, ../sass/_layout.scss */
 .card-label-purple {
   background-color: #93c;
 }
 
-/* line 131, ../sass/_layout.scss */
+/* line 166, ../sass/_layout.scss */
 .card-label-blue {
   background-color: #068edf;
+}
+
+/* line 169, ../sass/_layout.scss */
+.loading-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 9999;
+  padding: 25px;
+  color: #fff;
+  background: red;
 }
