--- a/UI/sass/_import.scss
+++ b/UI/sass/_import.scss
@@ -7,6 +7,8 @@
 @import "compass/css3/border-radius";
 @import "compass/utilities/general/clearfix";
 @import "compass/css3/images";
+@import "compass/css3/transform";
+@import "compass/css3/transition";
 @import "fonts";
 @import "mixins";
 @import "base";
